test/speedtest/openspeedtest/openspeedtest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openspeedtest
spec:
  selector:
    matchLabels:
      app: openspeedtest
  template:
    metadata:
      labels:
        app: openspeedtest
    spec:
      containers:
      - name: openspeedtest
        image: docker.io/openspeedtest/latest:v2.0.5
        ports:
        - name: http
          containerPort: 3000
        resources:
          requests:
            memory: 10Mi
          limits:
            memory: 1000Mi
---
apiVersion: v1
kind: Service
metadata:
  name: openspeedtest
spec:
  selector:
    app: openspeedtest
  ports:
  - name: http
    port: 80
    targetPort: http
